Step 7 and final adjustments

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -31,11 +31,8 @@
     "Determining how a Reddit post's Karma is influenced can allow these groups to achieve the maximum reach possible. By analysing the information associated with Reddit posts and comparing it to their popularity, I hope to answer:\n",
     "1. How is post length connected to post success?\n",
     "2. Is date/time of posting relevant to a post's success.\n",
-    "3. How does the \"mood\" found in a post's body influence its success?\n",
-    "4. How do attached photos impact post performance?\n",
-    "5. Are there any other factors that affect how a Reddit post will be received?\n",
-    "\n",
-    "Posts can be analysed to determine their \"mood\" from their content, this will need to be done before any machine learning models can be trained. Similarly, if post photos are included in the data they will need to be classified in some way so that their influence on post Karma can be quantitatively seen.\n"
+    "3. Are there any other factors that affect how a Reddit post will be received?\n",
+    "\n"
    ]
   },
   {
@@ -87,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "160881da",
    "metadata": {},
    "outputs": [],
@@ -101,15 +98,23 @@
     "import seaborn as sns\n",
     "\n",
     "#ML\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import statsmodels.api as sm\n",
-    "from statsmodels.tools.eval_measures import rmse\n"
+    "from statsmodels.tools.eval_measures import rmse\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "7212a107",
    "metadata": {},
    "outputs": [
@@ -211,7 +216,7 @@
    ],
    "source": [
     "#load and visualise data\n",
-    "reddit_data = pd.read_csv(\"reddit_data.csv\", quotechar='\"', escapechar='\\\\')\n",
+    "reddit_data = pd.read_csv(\"dataProject.csv\", quotechar='\"', escapechar='\\\\')\n",
     "print(\"Data Info:\")\n",
     "print(reddit_data.info())\n",
     "print(\"Data Head:\")\n",
@@ -273,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "b568ee0e",
    "metadata": {},
    "outputs": [
@@ -340,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "b0fd8830",
    "metadata": {},
    "outputs": [
@@ -466,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "daa946e9",
    "metadata": {},
    "outputs": [
@@ -533,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "7a353c6b",
    "metadata": {},
    "outputs": [
@@ -609,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "bd642303",
    "metadata": {},
    "outputs": [
@@ -627,7 +632,7 @@
        "Text(0.5, 1.0, 'Score Distribtuion of weekend vs weekday posts')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -667,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "a9ce9e2c",
    "metadata": {},
    "outputs": [
@@ -712,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "15a41180",
    "metadata": {},
    "outputs": [
@@ -781,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "1d15be9e",
    "metadata": {},
    "outputs": [],
@@ -802,81 +807,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "fa1cdd31",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:11: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[\"is_video\"] = x[\"is_video\"].astype(int)\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:12: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[\"is_self\"] = x[\"is_self\"].astype(int)\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[\"created_utc\"] = created_utc_temp\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:19: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[sub] = x[sub].astype(int)\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:19: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[sub] = x[sub].astype(int)\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:19: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[sub] = x[sub].astype(int)\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:19: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[sub] = x[sub].astype(int)\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:19: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[sub] = x[sub].astype(int)\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:19: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[sub] = x[sub].astype(int)\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:19: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x[sub] = x[sub].astype(int)\n",
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_18440\\2369076714.py:21: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  x.drop(\"created_time\", axis=1, inplace=True)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1163,7 +1097,7 @@
        "[5493 rows x 14 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "d0d99ef2",
    "metadata": {},
    "outputs": [
@@ -1256,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "id": "df7c099d",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "993a7079",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c9cea3be",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "4cb6ad32",
    "metadata": {},
    "outputs": [
@@ -1418,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "ef5cd8d9",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1b71e99d",
    "metadata": {},
    "outputs": [
@@ -1507,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "21491e51",
    "metadata": {},
    "outputs": [
@@ -1533,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "d2b9cd2b",
    "metadata": {},
    "outputs": [
@@ -1581,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "fcf690f6",
    "metadata": {},
    "outputs": [
@@ -1628,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "381280d7",
    "metadata": {},
    "outputs": [
@@ -1686,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "123273c9",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2282a016",
    "metadata": {},
    "outputs": [
@@ -1755,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "id": "a8a9cabe",
    "metadata": {},
    "outputs": [
@@ -1804,14 +1738,147 @@
    "metadata": {},
    "source": [
     "## Model 2: Neural Networks\n",
-    "Neural Networks may be better suited to predicting the score of posts in this dataset.\n"
+    "Neural Networks may be better suited to predicting the score of posts in this dataset.\n",
+    "\n",
+    "First: Scale the data and split it between training, validation, and test data\n",
+    "\n",
+    "Then fine tune the structure of the model to determine the best neural network. \n",
+    "\n",
+    "Finally the neural network model is retrained with the validation data and evaluated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "52ff84e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'  \\n#switch between 2 and 6 layers, with each layer having between 4 and 10 nodes in steps of 2\\nfor layers in range(2, 7):\\n    for nodes in range(4, 11, 2):\\n        model_accuracy = calc_model_accuracy((nodes,)*layers)\\n        print(\"(\", layers * f\"{nodes}, \", \"): \", model_accuracy)\\n\\n    '"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#scale data\n",
+    "x_norm = x.apply(lambda iterator: ((iterator - iterator.min())/(iterator.max() - iterator.min())))\n",
+    "y_norm = y \n",
+    "\n",
+    "#split 60/20/20\n",
+    "x_temp, x_test, y_temp, y_test = train_test_split(x_norm, y, test_size = 0.2, random_state=111)\n",
+    "x_train, x_validation, y_train, y_validation = train_test_split(x_temp, y_temp, test_size = 0.25, random_state=111)\n",
+    "\n",
+    "\n",
+    "def calc_model_accuracy(structure):\n",
+    "    model = MLPClassifier(hidden_layer_sizes=structure,max_iter=100, random_state=444)\n",
+    "    model.fit(x_train, y_train)\n",
+    "    predictions = model.predict(x_validation)\n",
+    "    confusionMatrix = confusion_matrix(y_validation, predictions)\n",
+    "    accuracy = (confusionMatrix[0,0]+confusionMatrix[1,1])/len(predictions)\n",
+    "    return accuracy\n",
+    "\n",
+    "\n",
+    "'''  \n",
+    "#switch between 2 and 6 layers, with each layer having between 4 and 10 nodes in steps of 2\n",
+    "for layers in range(2, 7):\n",
+    "    for nodes in range(4, 11, 2):\n",
+    "        model_accuracy = calc_model_accuracy((nodes,)*layers)\n",
+    "        print(\"(\", layers * f\"{nodes}, \", \"): \", model_accuracy)\n",
+    "\n",
+    "    '''\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "83d7cbaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[165   0   0 ...   0   0   0]\n",
+      " [  5   0   0 ...   0   0   0]\n",
+      " [  4   0   0 ...   0   0   0]\n",
+      " ...\n",
+      " [  0   0   0 ...   0   0   0]\n",
+      " [  0   0   0 ...   0   0   0]\n",
+      " [  0   0   0 ...   0   0   0]]\n",
+      "Accuracy: 0.12008733624454149\n",
+      "Error Rate: 0.8799126637554585\n",
+      "Precision: nan\n",
+      "Recall: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#retrain based on best model (4, 4)\n",
+    "modelBest = MLPClassifier(hidden_layer_sizes=(4, 4),max_iter=100, random_state=444)\n",
+    "modelBest.fit(x_temp, y_temp)\n",
+    "\n",
+    "#Evaluate model\n",
+    "predictions = modelBest.predict(x_test)\n",
+    "confusionMatrix = confusion_matrix(y_test, predictions)\n",
+    "print(confusionMatrix)\n",
+    "\n",
+    "accuracy = (confusionMatrix[0,0]+confusionMatrix[1,1])/len(predictions)\n",
+    "errorRate = 1- accuracy\n",
+    "precision = (confusionMatrix[1,1])/(confusionMatrix[1,1] + confusionMatrix[0,1])\n",
+    "recall = (confusionMatrix[1,1])/(confusionMatrix[1,1] + confusionMatrix[1,0])\n",
+    "print(\"Accuracy: \" + str(accuracy))\n",
+    "print(\"Error Rate: \" + str(errorRate))\n",
+    "print(\"Precision: \" + str(precision))\n",
+    "print(\"Recall: \" + str(recall))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "52ff84e2",
+   "id": "1a9b61fd",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Neural Network Model Results:\n",
+    "The neural network showed even poorer results than the linear regression model, reaching a top accuracy of only 12%.\n",
+    "\n",
+    "## Most Successful Model?\n",
+    "The linear regression model showed the most success, although this was limited.\n",
+    "\n",
+    "# Step 7: Findings\n",
+    "From the univariate analysis, I found that most reddit posts are published around 2pm, and that the distribution of posts is generally stable across the week, with a slight jump on Mondays, and then a gradual increase throughout the week. \n",
+    "\n",
+    "It also became clear that most posts receive little attention, postive or negative. Similarly downvotes have a negligible effect on most posts, suggesting most posts simply aren't interacted with enough to receive enough negative attention to skew the score.\n",
+    "\n",
+    "\n",
+    "### Comments:\n",
+    "The number of comments a post has is a moderately good predictor of its score, showing a correlation of 0.585\n",
+    "\n",
+    "\n",
+    "### Subreddit:\n",
+    "The subreddit in which a post is published has an effect on the success it can expect to have. Extremely popular subreddits like r/todayilearned can average a score of around 5000, whereas smaller ones like r/food can expect around 200.\n",
+    "\n",
+    "\n",
+    "## Predictive Models:\n",
+    "Predictive modelling has been uneffective at predicting scores in this dataset. A linear regression model achieved a maximum accuracy of 37.83% and a neural network achieved an accuracy of 12%.\n",
+    "This may suggest that the popularity of a reddit post is only minimally influenced by factors other than its content.\n",
+    "To achieve a more accurate model, I considered running the selftext variable of each post through a sentiment extraction API.\n",
+    "However any APIs I found were unable to process the amount of data I needed within their accepted rate limit, or prohibitively expensive.\n",
+    "\n",
+    "Developing further predictive models would likely benefit from analysing the content of the posts themselves rather than the metadata surrounding them, as this seems to be what ultimately determines success or failures of a reddit post.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
