--- a/DataMining.ipynb
+++ b/DataMining.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "29971bd8",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
     "\n",
     "# using csv library to avoid dealing with comma/quotes/other chars that would need to be escaped\n",
     "# https://stackoverflow.com/questions/2425272/how-to-dynamically-access-class-properties-in-python referenced to fix issue looping through submission object\n",
-    "with open(\"reddit_data.csv\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"dataProject.csv\", \"w\", encoding=\"utf-8\") as f:\n",
     "    csv_writer = csv.writer(f)\n",
     "    csv_writer.writerow(VARIABLES + CUSTOM_VARS)\n",
     "    for sub in SUBREDDITS:        \n",
