--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -1875,6 +1875,10 @@
     "Developing further predictive models would likely benefit from analysing the content of the posts themselves rather than the metadata surrounding them, as this seems to be what ultimately determines success or failures of a reddit post.\n",
     "\n",
     "\n",
+    "## Contributions:\n",
+    "This project, its background research, the research of official documentation, the writing of the project code, and the creation of this documentation, and all stages of the data analysis cycle were carried out by me, Christopher Healy.\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
